--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,28 @@ __pycache__/
 # Environment files
 .env
 .env.local
+
+# Node/Frontend ignores
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
