feat: add comprehensive test suite for payout service, webhook service, and security mechanisms

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -8,3 +8,7 @@ addopts = -v --tb=short --asyncio-mode=auto
 markers =
     asyncio: marks tests as async
     slow: marks tests as slow
+    unit: marks tests as unit tests
+    integration: marks tests as integration tests
+    security: marks tests as security tests
+    api: marks tests as API tests
