feat: enhance webhook idempotency checks and add last_webhook_event_id to Payout model

--- a/backend/app/db/alembic.ini
+++ b/backend/app/db/alembic.ini
@@ -1,5 +1,5 @@
 [alembic]
-script_location = backend/app/db/migrations
+script_location = migrations
 sqlalchemy.url = postgresql+asyncpg://
 
 [loggers]
